@@ -2,6 +2,7 @@
     * Add Boots + Power = sprint launch flying
     * Add Chestplate + Infinity = god mode
     * Add Boots + Flame = set ground on fire
+    * Fix Hoe + Aqua Affinity = auto-hydrate, now can make flowing water stationary
 
 2012-02-10  0.3
     * Add Bow + Knockback = pierce blocks
